// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageBlock shows a page with information about a certain block 1`] = `
<tm-page-stub
  data-title="Block"
  subtitle=""
  title=""
>
  <div
    class="page-profile__header page-profile__section block"
  >
    <div
      class="row"
    >
      <div
        class="page-profile__header__info"
      >
        <div
          class="page-profile__status-and-title"
        >
          <h2
            class="page-profile__title"
          >
            
              Block #100
            
          </h2>
        </div>
      </div>
    </div>
     
    <div
      class="row"
    >
      <dl
        class="info_dl colored_dl"
      >
        <dt>
          Time
        </dt>
         
        <dd>
          Jan 1st 1970, 00:00:42
        </dd>
      </dl>
    </div>
  </div>
   
  <div
    class="page-profile__section block"
  >
    <div
      class="row"
    >
      <div
        class="column"
      >
        <h3>
          Transactions
        </h3>
         
        <!---->
         
        <li-any-transaction-stub
          address=""
          bondingdenom="atom"
          height="100"
          proposalsurl="/governance"
          time="42000"
          transaction="[object Object]"
          unbondingtime="NaN"
          validators="[object Object],[object Object],[object Object]"
          validatorsurl="/staking/validators"
        />
        <li-any-transaction-stub
          address=""
          bondingdenom="atom"
          height="100"
          proposalsurl="/governance"
          time="42000"
          transaction="[object Object]"
          unbondingtime="NaN"
          validators="[object Object],[object Object],[object Object]"
          validatorsurl="/staking/validators"
        />
        <li-any-transaction-stub
          address=""
          bondingdenom="atom"
          height="100"
          proposalsurl="/governance"
          time="42000"
          transaction="[object Object]"
          unbondingtime="NaN"
          validators="[object Object],[object Object],[object Object]"
          validatorsurl="/staking/validators"
        />
         
        <br />
      </div>
    </div>
  </div>
</tm-page-stub>
`;

exports[`PageBlock shows the block page with no txs 1`] = `
<tm-page-stub
  data-title="Block"
  subtitle=""
  title=""
>
  <div
    class="page-profile__header page-profile__section block"
  >
    <div
      class="row"
    >
      <div
        class="page-profile__header__info"
      >
        <div
          class="page-profile__status-and-title"
        >
          <h2
            class="page-profile__title"
          >
            
              Block #100
            
          </h2>
           
          <h3
            class="page-profile__subtitle"
          >
            
              ABCD1234
            
          </h3>
        </div>
      </div>
    </div>
     
    <div
      class="row"
    >
      <dl
        class="info_dl colored_dl"
      >
        <dt>
          Time
        </dt>
         
        <dd>
          Jan 1st 1970, 00:00:42
        </dd>
      </dl>
    </div>
  </div>
   
  <div
    class="page-profile__section block"
  >
    <div
      class="row"
    >
      <div
        class="column"
      >
        <h3>
          Transactions
        </h3>
         
        <tm-data-msg-stub
          icon="info_outline"
        >
          <div>
            
              No Transactions
            
          </div>
           
          <div>
            
              This block doesn't contain any transaction.
            
          </div>
        </tm-data-msg-stub>
          
        <br />
      </div>
    </div>
  </div>
</tm-page-stub>
`;

exports[`PageBlock shows the page when the block hasn't been loaded yet 1`] = `
<tm-page-stub
  data-title="Block"
  subtitle=""
  title=""
>
  <div
    class="page-profile__header page-profile__section block"
  >
    <div
      class="row"
    >
      <div
        class="page-profile__header__info"
      >
        <div
          class="page-profile__status-and-title"
        >
          <h2
            class="page-profile__title"
          >
            
              Block --
            
          </h2>
        </div>
      </div>
    </div>
     
    <div
      class="row"
    >
      <dl
        class="info_dl colored_dl"
      >
        <dt>
          Time
        </dt>
         
        <dd>
          --
        </dd>
      </dl>
    </div>
  </div>
   
  <div
    class="page-profile__section block"
  >
    <div
      class="row"
    >
      <div
        class="column"
      >
        <h3>
          Transactions
        </h3>
         
        <!---->
          
        <br />
      </div>
    </div>
  </div>
</tm-page-stub>
`;
